Contact section update

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <nav id="nav">
       <div class="button-container" id="button-container">
-        <a href="#home">HOME</a>
-        <a href="#contact">CONTACT</a>
+        <a href="#home" class="home">HOME</a>
+        <a href="#contact" class="contact">CONTACT</a>
       </div>
       <div class="switch-mode-container" id="switch-mode-container">
         <span class="mode-text">Light Mode</span>
@@ -39,6 +39,14 @@
     <section id="contact">
       <div class="title-group">
         <h1>Contact</h1>
+        <div class="icons-container">
+          <a href="https://www.linkedin.com/in/adrian-s%C5%82awi%C5%84ski/">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/xShadeen">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
       </div>
     </section>
     <script src="script.js"></script>
